--- a/_Dungeon_Crawler/src/GUI/MainScreen.form
+++ b/_Dungeon_Crawler/src/GUI/MainScreen.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.MainScreen">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="150" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="822" height="400"/>
@@ -21,10 +21,10 @@
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="w"/>
+          <text value="W"/>
         </properties>
       </component>
-      <component id="7476c" class="javax.swing.JScrollBar" binding="scrollBar1" default-binding="true">
+      <component id="7476c" class="javax.swing.JScrollBar" binding="scrollBar">
         <constraints>
           <grid row="1" column="1" row-span="5" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -35,7 +35,7 @@
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="a"/>
+          <text value="A"/>
         </properties>
       </component>
       <component id="c305" class="javax.swing.JButton" binding="dButton" default-binding="true">
@@ -43,7 +43,15 @@
           <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="d"/>
+          <text value="D"/>
+        </properties>
+      </component>
+      <component id="c6cb4" class="javax.swing.JButton" binding="eButton" default-binding="true">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="E"/>
         </properties>
       </component>
       <grid id="27961" binding="jPanelPicture" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -53,22 +61,8 @@
         </constraints>
         <properties/>
         <border type="none"/>
-        <children>
-          <vspacer id="8c2dd">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-        </children>
+        <children/>
       </grid>
-      <component id="c6cb4" class="javax.swing.JButton" binding="eButton" default-binding="true">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="e"/>
-        </properties>
-      </component>
     </children>
   </grid>
 </form>
